# blog

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
2024/02/21/master-scala-rest-apis-in-3-simple-concepts-illustrated-guide-with-tapir-http4s-and-circe/: index.html
2024/03/17/image-super-resolution-dat-dual-aggregation-transformer-the-new-goat-for-pythonistas-/: index.html
2024/04/18/introducing-tarp-stack---tapir-react-and-postgresql/: index.html
2024/06/22/mastering-spark-on-k8s--and-why-i-dumped--kubeflow-spark-operator-formerly-googles-spark-operator/: index.html
archive/2024/: index.html
archive/2025/: index.html
assets/posts/0/: figures.excalidraw
assets/posts/1/: figures.excalidraw
assets/posts/1/backend/: README.md  environment.yml  pyproject.toml
assets/posts/1/backend/backend/: main.py
assets/posts/1/backend/backend/conf/: fastapi_conf.py
assets/posts/1/scripts/: README.md  main_upscales.py  pyproject.toml
assets/posts/1/scripts/scripts/: main.py  upscales_script.py  zooms_script.py
assets/posts/2/: figures.excalidraw  vscode.code-workspace
assets/posts/3/: vscode.code-workspace
assets/posts/4/: vscode.code-workspace
category/backend/: index.html
category/data-engineering/: index.html
category/devops/: index.html
category/docker/: index.html
category/frontend/: index.html
category/kubernetes/: index.html
category/linux/: index.html
category/nginx/: index.html
category/python/: index.html
category/scala/: index.html
category/typescript/: index.html
docs/: index.md
docs/posts/0/: index.md
docs/posts/1/: index.md
docs/posts/2/: index.md
docs/posts/3/: index.md
docs/posts/4/: index.md
docs/stylesheets/: extra.css
search/: search_index.json
stylesheets/: extra.css
(+81 files in other folders)
