[tool.poetry]
name = "blog"
version = "0.1.0"
description = "iLoveData - Simplified Full Stack Data Engineering"
authors = ["iLoveDataJjia <ilovedata.jjia@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.13"
mkdocs-glightbox = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
