[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LovinData <ilovedata.jjia@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.scripts]
dev = "backend.main:dev"
start = "backend.main:start"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
